Update team headshots and image paths
Added new headshot images for team members and updated the image paths in team.html to use the new headshots. This improves consistency and professionalism in the team presentation.

--- a/team.html
+++ b/team.html
@@ -47,49 +47,49 @@
 		<div class="team-grid">
 			<!-- Team Lead Cards -->
 			<div class="member-card">
-				<img src="assets/images/Fabiola.jpg" alt="Fabiola Fabian Plascencia" class="member-img" />
+				<img src="assets/images/headshots/fabiola_plascencia.jpg" alt="Fabiola Fabian Plascencia" class="member-img" />
 				<div class="member-name">Fabiola Fabian Plascencia</div>
 				<div class="member-role">Project Director</div>
 				<p style="color:var(--subtxt);font-size:0.98rem;margin-bottom:0.7rem;">As project director, I manage SolarPack’s administration, coordinate collaboration between teams, and keep us true to our core mission of practical sustainability. I joined SolarPack because I want to use my mechanical engineering degree to contribute to the creation and implementation of sustainable practices. The engineers I admire the most are those who carefully consider how their designs will impact people in unexpected ways, both in the present and in the future. In my free time, I enjoy listening to musicals, playing video games, and watching Disney movies.</p>
 			</div>
 			<div class="member-card">
-				<img src="assets/images/Screenshot 2024-08-26 105741_edited_edit" alt="Maghen Lahoud" class="member-img" />
+				<img src="assets/images/headshots/maghen_lahoud.jpg" alt="Maghen Lahoud" class="member-img" />
 				<div class="member-name">Maghen Lahoud</div>
 				<div class="member-role">Aerodynamics Lead</div>
 				<p style="color:var(--subtxt);font-size:0.98rem;margin-bottom:0.7rem;">As the aero team lead, I oversee the development of the aeroshell through 3D modeling and composite manufacturing. I joined SolarPack as a freshman because it aligns with my goal of eventually working in aerospace sustainability. Now, as a sophomore, I feel I've gained valuable technical and interpersonal skills while on the team. Outside of SolarPack, I enjoy hiking, swimming, traveling, trying new foods, and collecting rocks.</p>
 			</div>
 			<div class="member-card">
-				<img src="assets/images/Will Shearin.png" alt="Will Shearin" class="member-img" />
+				<img src="assets/images/headshots/will_shearin.jpg" alt="Will Shearin" class="member-img" />
 				<div class="member-name">Will Shearin</div>
 				<div class="member-role">Structures Lead</div>
 				<p style="color:var(--subtxt);font-size:0.98rem;margin-bottom:0.7rem;">As the structures team lead, I manage a team of students whose responsibility is to model, test, and fabricate the chassis, roll cage, and other mechanical structures of the car. I am currently a senior in mechanical engineering, and I joined SolarPack right after my sophomore year. I took over as team lead after my junior year and have really enjoyed all my time here. I can see how my classroom skills translate into real-world environments, and how I can contribute to promoting sustainability. In my free time, I enjoy hanging out with friends and cooking.</p>
 			</div>
 			<div class="member-card">
-				<img src="assets/images/IMG_0441_edited.jpg" alt="Aaron Wold" class="member-img" />
+				<img src="assets/images/headshots/aaron_wold.jpg" alt="Aaron Wold" class="member-img" />
 				<div class="member-name">Aaron Wold</div>
 				<div class="member-role">Vehicle Dynamics Lead</div>
 				<p style="color:var(--subtxt);font-size:0.98rem;margin-bottom:0.7rem;">As the vehicle dynamics team lead, I oversee the development of mechanical aspects within the car, involving systems such as suspension, steering, and powertrain. My interest in these systems stemmed from my interest in LEGO as a child. My other hobbies include playing guitar, playing videogames, and skateboarding.</p>
 			</div>
 			<div class="member-card">
-				<img src="assets/images/image_edited.png" alt="Sean Harris" class="member-img" />
+				<img src="assets/images/headshots/sean_harris.jpg" alt="Sean Harris" class="member-img" />
 				<div class="member-name">Sean Harris</div>
 				<div class="member-role">Technical Director</div>
 				<p style="color:var(--subtxt);font-size:0.98rem;margin-bottom:0.7rem;">As technical director, I manage the engineering operations of the team and create timelines that allow us to achieve our goals with each car. As a mechanical engineering student minoring in renewable energy, I find myself constantly thinking about how we can become more sustainable. This is exactly what caused me to become a member of SolarPack and it is also what drove me to my current position. Outside of SolarPack, I enjoy playing soccer, listening to music, and playing a variety of card games.</p>
 			</div>
 			<div class="member-card">
-				<img src="assets/images/Izak.jpg" alt="Izak Durand" class="member-img" />
+				<img src="assets/images/headshots/izak_durand.jpg" alt="Izak Durand" class="member-img" />
 				<div class="member-name">Izak Durand</div>
 				<div class="member-role">High Voltage Lead</div>
 				<p style="color:var(--subtxt);font-size:0.98rem;margin-bottom:0.7rem;">As High Voltage lead, I oversee the vehicle's main power and driving systems. This includes the 3-phase motor, inverter, battery pack, and vehicle protection systems. Motor drives and high voltage systems are my forte, and Solarpack has been a fantastic opportunity to work on an awesome project alongside wonderful team members! When I’m not working on the car, I enjoy playing tennis and rock climbing with friends.</p>
 			</div>
 			<div class="member-card">
-				<img src="assets/images/image_edited.jpg" alt="Connor Wayman" class="member-img" />
+				<img src="assets/images/headshots/connor_wayman.jpg" alt="Connor Wayman" class="member-img" />
 				<div class="member-name">Connor Wayman</div>
 				<div class="member-role">Low Voltage Lead</div>
 				<p style="color:var(--subtxt);font-size:0.98rem;margin-bottom:0.7rem;">As the Low Voltage team lead, I manage the systems of the car that allow it to charge using solar energy. After building solar cars in high school, I wanted to continue down that path, with SolarPack being the best opportunity for that. In my free-time, I enjoy tinkering with electronics and building PCs with friends.</p>
 			</div>
 			<div class="member-card">
-				<img src="assets/images/image_edited_edited.jpg" alt="Gerbrand Poster" class="member-img" />
+				<img src="assets/images/headshots/gerbrand_poster.jpg" alt="Gerbrand Poster" class="member-img" />
 				<div class="member-name">Gerbrand Poster</div>
 				<div class="member-role">Business Lead</div>
 				<p style="color:var(--subtxt);font-size:0.98rem;margin-bottom:0.7rem;">As the business team lead, I oversee sponsorship, finance, social media, and outreach events for SolarPack. I am a fourth-year majoring in English who joined SolarPack in my first year after talking to Chris Ford at the Winter involvement fair. I love working with engineers--they are very sensible and have a different perspective than the humanities students I am used to. There are few things cooler or more environmentally beneficial than solar cars, and I revel in building excitement for them in potential supporters. Outside of SolarPack I enjoy good books, fine cuisine, and indolence.</p>
