--- a/alumni.html
+++ b/alumni.html
@@ -34,8 +34,8 @@
 		</div>
 		<nav class="nav">
 			<a href="index.html">Home</a>
+			<a href="app.html">App</a>
 			<a href="team.html">Team</a>
-
 			<a href="alumni.html" class="active">Alumni</a>
 			<a href="donate.html">Donate</a>
 			<a href="blog.html">Blog</a>
