--- a/blog.html
+++ b/blog.html
@@ -32,6 +32,7 @@
 		</div>
 <nav class="nav">
 	<a href="index.html">Home</a>
+	<a href="app.html">App</a>
 	<a href="team.html">Team</a>
 	<a href="alumni.html">Alumni</a>
 	<a href="donate.html">Donate</a>
