--- a/donate.html
+++ b/donate.html
@@ -30,8 +30,8 @@
 		</div>
 		<nav class="nav">
 			<a href="index.html">Home</a>
+			<a href="app.html">App</a>
 			<a href="team.html">Team</a>
-
 			<a href="alumni.html">Alumni</a>
 			<a href="donate.html" class="active">Donate</a>
 			<a href="blog.html">Blog</a>
