--- a/app.html
+++ b/app.html
@@ -105,14 +105,15 @@
 					<img src="assets/images/iphone-app/Iphone3.png" alt="App Screenshot 3" style="width:100%;max-width:180px;border-radius:var(--radius);box-shadow:0 2px 16px #0005;background:#222;justify-self:center;" />
 					<img src="assets/images/iphone-app/Iphone4.png" alt="App Screenshot 4" style="width:100%;max-width:180px;border-radius:var(--radius);box-shadow:0 2px 16px #0005;background:#222;justify-self:center;" />
 					<img src="assets/images/iphone-app/Iphone5.png" alt="App Screenshot 5" style="width:100%;max-width:180px;border-radius:var(--radius);box-shadow:0 2px 16px #0005;background:#222;justify-self:center;" />
-                    <img src="assets/images/iphone-app/Iphone1.png" alt="App Screenshot 1" style="width:100%;max-width:180px;border-radius:var(--radius);box-shadow:0 2px 16px #0005;background:#222;justify-self:center;" />
+					<img src="assets/images/iphone-app/Iphone1.png" alt="App Screenshot 1" style="width:100%;max-width:180px;border-radius:var(--radius);box-shadow:0 2px 16px #0005;background:#222;justify-self:center;" />
 				</div>
 			</div>
 			<!-- End App Screenshots Grid -->
 		</section>
 	</main>
 	<footer class="footer">
-		&copy; 2025 SolarPack · NC State Solar Vehicle Team. All rights reserved.
+		&copy; 2025 SolarPack · NC State Solar Vehicle Team. All rights reserved.<br />
+		<a href="privacy-policy.html" style="color:var(--accent);text-decoration:none;font-size:0.98rem;">Privacy Policy</a>
 	</footer>
 </body>
 </html>
