--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -235,7 +235,7 @@
 				<div class="policy-content">
 					<p>
 						Questions? Open an issue on
-						<a href="https://github.com/your-org/your-repo" target="_blank" rel="noopener noreferrer">GitHub</a>
+						<a href="https://github.com/NCSU-Solarpack" target="_blank" rel="noopener noreferrer">GitHub</a>
 						or email us at
 						<a href="mailto:privacy@yourdomain.com">privacy@yourdomain.com</a>.
 					</p>
