Update social links with real URLs
Replaced placeholder social media links with actual Instagram, LinkedIn, and Facebook URLs in both contact.html and index.html. Removed Twitter and YouTube icons to reflect available social platforms.

--- a/index.html
+++ b/index.html
@@ -186,11 +186,9 @@
 		</section>
 
 		<div class="socials">
-			<a href="#" title="Instagram"><i class="fab fa-instagram"></i></a>
-			<a href="#" title="Twitter"><i class="fab fa-x-twitter"></i></a>
-			<a href="#" title="LinkedIn"><i class="fab fa-linkedin"></i></a>
-			<a href="#" title="YouTube"><i class="fab fa-youtube"></i></a>
-			<a href="#" title="Facebook"><i class="fab fa-facebook"></i></a>
+	  <a href="https://www.instagram.com/solarpacknc/" title="Instagram" target="_blank" rel="noopener"><i class="fab fa-instagram"></i></a>
+	  <a href="https://www.linkedin.com/company/solarpack-nc-state/" title="LinkedIn" target="_blank" rel="noopener"><i class="fab fa-linkedin"></i></a>
+	  <a href="https://www.facebook.com/SolarPackNC/" title="Facebook" target="_blank" rel="noopener"><i class="fab fa-facebook"></i></a>
 		</div>
 	</main>
 	<footer class="footer">
