--- a/alumni.html
+++ b/alumni.html
@@ -8,14 +8,12 @@
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 	<link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=DM+Sans:wght@400;600&display=swap" rel="stylesheet" />
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" />
+	
+	<!-- SolarPack Header Component -->
+	<script src="assets/js/header.js"></script>
+	
 	<style>
-		:root { --bg: #0e0e0e; --card: #181818; --txt: #fff; --subtxt: #cecece; --accent: #e53935; --radius: 8px; }
-		body { margin: 0; font-family: "DM Sans", system-ui, sans-serif; background: var(--bg); color: var(--txt); }
-		.header { display: flex; align-items: center; justify-content: space-between; padding: 1.5rem 2rem 1rem; background: var(--card); }
-		.logo { height: 48px; width: 48px; background: #222; border-radius: 50%; display: flex; align-items: center; justify-content: center; font-family: "Bebas Neue", sans-serif; font-size: 2rem; color: var(--accent); margin-right: 1.2rem; }
-		.nav { display: flex; gap: 1.2rem; }
-		.nav a { color: var(--txt); text-decoration: none; font-weight: 600; padding: 0.4rem 0.9rem; border-radius: var(--radius); transition: background 0.15s; }
-		.nav a.active, .nav a:hover { background: var(--accent); color: #fff; }
+		/* Page-specific styles */
 		h1 { font-family: "Bebas Neue", sans-serif; font-size: clamp(2.5rem, 7vw, 4.5rem); letter-spacing: 0.04em; margin: 2.5rem 0 0.5rem; text-align: center; }
 		.alumni-grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(220px, 1fr)); gap: 2rem; max-width: 900px; margin: 2.5rem auto 0; }
 		.alumni-card { background: var(--card); border-radius: var(--radius); box-shadow: 0 1px 6px #0003; padding: 2rem 1.2rem 1.2rem; text-align: center; }
@@ -24,24 +22,12 @@
 		.alumni-role { color: var(--subtxt); font-size: 1.1rem; margin-bottom: 0.7rem; }
 		.alumni-socials a { color: var(--accent); margin: 0 0.4rem; font-size: 1.2rem; }
 		.alumni-socials a:hover { color: #fff; }
+		
 		.footer { text-align: center; color: #888; font-size: 1rem; margin: 3.5rem 0 1.5rem; }
 	</style>
 </head>
 <body>
-	<header class="header">
-		<div class="logo" style="background:none;padding:0;margin-right:1.2rem;box-shadow:none;">
-		  <img src="assets/images/solarpack_logo.png" alt="SolarPack Logo" style="height:44px;width:44px;object-fit:contain;display:block;background:none;border-radius:0;" />
-		</div>
-		<nav class="nav">
-			<a href="index.html">Home</a>
-			<a href="app.html">App</a>
-			<a href="team.html">Team</a>
-			<a href="alumni.html" class="active">Alumni</a>
-			<a href="donate.html">Donate</a>
-			<a href="blog.html">Blog</a>
-			<a href="contact.html">Contact</a>
-		</nav>
-	</header>
+	<!-- Header will be automatically injected here by header.js -->
 	<main>
 		<h1>Alumni</h1>
 		<div class="alumni-grid">
