--- a/alumni.html
+++ b/alumni.html
@@ -23,6 +23,29 @@
 		.alumni-socials a { color: var(--accent); margin: 0 0.4rem; font-size: 1.2rem; }
 		.alumni-socials a:hover { color: #fff; }
 		
+		.alumni-by-year {
+			max-width: 900px;
+			margin: 2.5rem auto 0;
+		}
+		
+		.alumni-columns {
+			display: grid;
+			grid-template-columns: 1fr 1fr;
+			gap: 2.5rem;
+		}
+		
+		/* Mobile responsive alumni layout */
+		@media (max-width: 768px) {
+			.alumni-columns {
+				grid-template-columns: 1fr;
+				gap: 1.5rem;
+			}
+			
+			.alumni-by-year {
+				padding: 0 1rem;
+			}
+		}
+		
 		.footer { text-align: center; color: #888; font-size: 1rem; margin: 3.5rem 0 1.5rem; }
 	</style>
 </head>
@@ -33,8 +56,8 @@
 		<div class="alumni-grid">
 		</div>
 		<!-- Alumni by Year -->
-	<div style="max-width:900px;margin:2.5rem auto 0;">
-	  <div style="display: grid; grid-template-columns: 1fr 1fr; gap: 2.5rem;">
+	<div class="alumni-by-year">
+	  <div class="alumni-columns">
 		<div>
 		  <section style="margin-bottom:2.5rem;">
 			<h2 style="color:var(--accent);font-family:'Bebas Neue',sans-serif;font-size:2rem;margin-bottom:0.7rem;">Spring 2021</h2>
@@ -48,53 +71,6 @@
 				<li><b>Business:</b> Emma McLaughlin</li>
 				<li><b>Systems Architecture:</b> Joe Schroedl</li>
 				<li><b>Aerodynamics:</b> Jonathan Rhodes</li>
-			</ul>
-		  </section>
-		  <section style="margin-bottom:2.5rem;">
-			<h2 style="color:var(--accent);font-family:'Bebas Neue',sans-serif;font-size:2rem;margin-bottom:0.7rem;">Fall 2019</h2>
-			<ul style="color:var(--subtxt);font-size:1.13rem;line-height:1.7;list-style:none;padding:0;">
-				<li><b>Director:</b> Adam Lineberger</li>
-				<li><b>Structures:</b> Emma Bartlett</li>
-				<li><b>Vehicle Dynamics:</b> Emily Solis</li>
-				<li><b>Electrical:</b> Ram Bala</li>
-				<li><b>Business:</b> Marie-Fleur Hombrecher</li>
-				<li><b>Systems Architecture:</b> Seth Hollandsworth</li>
-				<li><b>Aerodynamics:</b> Nate Browning</li>
-			</ul>
-		  </section>
-		  <section style="margin-bottom:2.5rem;">
-			<h2 style="color:var(--accent);font-family:'Bebas Neue',sans-serif;font-size:2rem;margin-bottom:0.7rem;">Spring 2018</h2>
-			<ul style="color:var(--subtxt);font-size:1.13rem;line-height:1.7;list-style:none;padding:0;">
-				<li><b>Director:</b> Byron Spells</li>
-				<li><b>Structures:</b> Rachel Shalloway</li>
-				<li><b>Vehicle Dynamics:</b> Cody Biedermann</li>
-				<li><b>Electrical:</b> Komal Charania</li>
-				<li><b>Business:</b> Sam Brennen-Lisko</li>
-				<li><b>Design:</b> Jecori Owens-Schuler</li>
-			</ul>
-		  </section>
-		  <section style="margin-bottom:2.5rem;">
-			<h2 style="color:var(--accent);font-family:'Bebas Neue',sans-serif;font-size:2rem;margin-bottom:0.7rem;">Spring 2017</h2>
-			<ul style="color:var(--subtxt);font-size:1.13rem;line-height:1.7;list-style:none;padding:0;">
-				<li><b>Director:</b> Byron Spells</li>
-				<li><b>Structures:</b> Arsh Grewal</li>
-				<li><b>Vehicle Dynamics:</b> Melissa Hyland</li>
-				<li><b>Electrical:</b> Thomas Dotson</li>
-			</ul>
-		  </section>
-		</div>
-		<div>
-		  <section style="margin-bottom:2.5rem;">
-			<h2 style="color:var(--accent);font-family:'Bebas Neue',sans-serif;font-size:2rem;margin-bottom:0.7rem;">Fall 2020</h2>
-			<ul style="color:var(--subtxt);font-size:1.13rem;line-height:1.7;list-style:none;padding:0;">
-				<li><b>Project Director:</b> Alex Kelly</li>
-				<li><b>Technical Director:</b> Emily Solis</li>
-				<li><b>Structures:</b> Bec Alderson</li>
-				<li><b>Vehicle Dynamics:</b> Jack McDonald</li>
-				<li><b>Electrical:</b> Nilesh Contractor</li>
-				<li><b>Business:</b> Alex Kelly</li>
-				<li><b>Systems Architecture:</b> Colin Brown</li>
-				<li><b>Aerodynamics:</b> Jesse Heidrich</li>
 			</ul>
 		  </section>
 		  <section style="margin-bottom:2.5rem;">
@@ -122,6 +98,53 @@
 			</ul>
 		  </section>
 		  <section style="margin-bottom:2.5rem;">
+			<h2 style="color:var(--accent);font-family:'Bebas Neue',sans-serif;font-size:2rem;margin-bottom:0.7rem;">Spring 2017</h2>
+			<ul style="color:var(--subtxt);font-size:1.13rem;line-height:1.7;list-style:none;padding:0;">
+				<li><b>Director:</b> Byron Spells</li>
+				<li><b>Structures:</b> Arsh Grewal</li>
+				<li><b>Vehicle Dynamics:</b> Melissa Hyland</li>
+				<li><b>Electrical:</b> Thomas Dotson</li>
+			</ul>
+		  </section>
+		</div>
+		<div>
+		  <section style="margin-bottom:2.5rem;">
+			<h2 style="color:var(--accent);font-family:'Bebas Neue',sans-serif;font-size:2rem;margin-bottom:0.7rem;">Fall 2020</h2>
+			<ul style="color:var(--subtxt);font-size:1.13rem;line-height:1.7;list-style:none;padding:0;">
+				<li><b>Project Director:</b> Alex Kelly</li>
+				<li><b>Technical Director:</b> Emily Solis</li>
+				<li><b>Structures:</b> Bec Alderson</li>
+				<li><b>Vehicle Dynamics:</b> Jack McDonald</li>
+				<li><b>Electrical:</b> Nilesh Contractor</li>
+				<li><b>Business:</b> Alex Kelly</li>
+				<li><b>Systems Architecture:</b> Colin Brown</li>
+				<li><b>Aerodynamics:</b> Jesse Heidrich</li>
+			</ul>
+		  </section>
+		  <section style="margin-bottom:2.5rem;">
+			<h2 style="color:var(--accent);font-family:'Bebas Neue',sans-serif;font-size:2rem;margin-bottom:0.7rem;">Fall 2019</h2>
+			<ul style="color:var(--subtxt);font-size:1.13rem;line-height:1.7;list-style:none;padding:0;">
+				<li><b>Director:</b> Adam Lineberger</li>
+				<li><b>Structures:</b> Emma Bartlett</li>
+				<li><b>Vehicle Dynamics:</b> Emily Solis</li>
+				<li><b>Electrical:</b> Ram Bala</li>
+				<li><b>Business:</b> Marie-Fleur Hombrecher</li>
+				<li><b>Systems Architecture:</b> Seth Hollandsworth</li>
+				<li><b>Aerodynamics:</b> Nate Browning</li>
+			</ul>
+		  </section>
+		  <section style="margin-bottom:2.5rem;">
+			<h2 style="color:var(--accent);font-family:'Bebas Neue',sans-serif;font-size:2rem;margin-bottom:0.7rem;">Spring 2018</h2>
+			<ul style="color:var(--subtxt);font-size:1.13rem;line-height:1.7;list-style:none;padding:0;">
+				<li><b>Director:</b> Byron Spells</li>
+				<li><b>Structures:</b> Rachel Shalloway</li>
+				<li><b>Vehicle Dynamics:</b> Cody Biedermann</li>
+				<li><b>Electrical:</b> Komal Charania</li>
+				<li><b>Business:</b> Sam Brennen-Lisko</li>
+				<li><b>Design:</b> Jecori Owens-Schuler</li>
+			</ul>
+		  </section>
+		  <section style="margin-bottom:2.5rem;">
 			<h2 style="color:var(--accent);font-family:'Bebas Neue',sans-serif;font-size:2rem;margin-bottom:0.7rem;">Fall 2017</h2>
 			<ul style="color:var(--subtxt);font-size:1.13rem;line-height:1.7;list-style:none;padding:0;">
 				<li><b>Director:</b> Byron Spells</li>
@@ -144,7 +167,6 @@
 		</div>
 	  </div>
 	</div>
-		</div>
 	</main>
 	<footer class="footer">&copy; 2025 Solar Car Club. All rights reserved.</footer>
 </body>
