--- a/index.html
+++ b/index.html
@@ -1,161 +1,220 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<meta charset="UTF-8" />
-	<meta name="viewport" content="width=device-width, initial-scale=1" />
-	<title>Solar Car Club · Home</title>
-	<link rel="preconnect" href="https://fonts.googleapis.com" />
-	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-	<link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=DM+Sans:wght@400;600&display=swap" rel="stylesheet" />
-	
-	<!-- SolarPack Header Component -->
-	<script src="assets/js/header.js"></script>
-	
-	<style>
-		/* Page-specific styles */
-  .hero {
-	text-align: center;
-	margin: 1.5rem 0 2.5rem;
-  }
-  
-  .hero-content {
-	text-align: left;
-	min-width: 220px;
-	max-width: 480px;
-  }
-  
-  /* Mobile responsive hero section */
-  @media (max-width: 768px) {
-	.hero-content {
-		text-align: center !important;
-		max-width: 100%;
-	}
-	
-	.hero-content p {
-		max-width: 100% !important;
-		margin: 0 auto !important;
-	}
-	
-	.hero {
-		padding: 0 1rem;
-	}
-  }
-		h1 {
-			font-family: "Bebas Neue", sans-serif;
-			font-size: clamp(2.5rem, 7vw, 4.5rem);
-			letter-spacing: 0.04em;
-			margin: 0 0 0.5rem;
-		}
-		.subtitle {
-			color: var(--subtxt);
-			font-size: 1.3rem;
-			margin-bottom: 2.5rem;
-		}
-		.img-hero {
-			width: 100%;
-			max-width: 420px;
-			border-radius: var(--radius);
-			box-shadow: 0 2px 16px #0005;
-			margin: 2rem auto 1.5rem;
-			display: block;
-			background: #222;
-		}
-		.section {
-			background: var(--card);
-			border-radius: var(--radius);
-			padding: 2rem 1.5rem;
-			margin: 2.5rem auto 0;
-			max-width: 700px;
-			box-shadow: 0 1px 6px #0003;
-		}
-		.socials {
-			display: flex;
-			justify-content: center;
-			gap: 1.2rem;
-			margin: 2.5rem 0 0;
-		}
-		.socials a {
-			color: var(--accent);
-			font-size: 2rem;
-			transition: color 0.15s;
-		}
-		.socials a:hover {
-			color: #fff;
-		}
-		.footer {
-			text-align: center;
-			color: #888;
-			font-size: 1rem;
-			margin: 3.5rem 0 1.5rem;
-		}
-	</style>
-	<!-- Font Awesome for icons -->
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" />
-  <!-- Ionicons CDN -->
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>SolarPack · Home</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=DM+Sans:wght@400;600&display=swap" rel="stylesheet" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" />
   <script type="module" src="https://unpkg.com/ionicons@7.2.1/dist/ionicons/ionicons.esm.js"></script>
   <script nomodule src="https://unpkg.com/ionicons@7.2.1/dist/ionicons/ionicons.js"></script>
+  <script src="assets/js/header.js" defer></script>
+  <style>
+    :root {
+      --bg: #0e0e0e;
+      --card: #181818;
+      --txt: #ffffff;
+      --subtxt: #cecece;
+      --accent: #e53935;
+      --radius: 10px;
+    }
+
+    body {
+      font-family: 'DM Sans', sans-serif;
+      background: var(--bg);
+      color: var(--txt);
+      margin: 0;
+      padding: 0;
+    }
+
+    main {
+      padding: 2rem 1.2rem;
+      max-width: 1200px;
+      margin: 0 auto;
+    }
+
+    .hero {
+      display: flex;
+      flex-wrap: wrap;
+      align-items: center;
+      justify-content: center;
+      gap: 2rem;
+      text-align: center;
+      margin-bottom: 3rem;
+    }
+
+    .hero img {
+      width: 100%;
+      max-width: 320px;
+      background: transparent;
+    }
+
+    .hero-content {
+      max-width: 500px;
+    }
+
+    .hero-content h1 {
+      font-family: 'Bebas Neue', sans-serif;
+      font-size: clamp(3.5rem, 8vw, 6rem);
+      color: var(--accent);
+      margin-bottom: 0.5rem;
+    }
+
+    .hero-content .subtitle {
+      font-size: 1.2rem;
+      color: var(--subtxt);
+      margin-bottom: 1.2rem;
+    }
+
+    .hero-content p {
+      color: var(--subtxt);
+      font-size: 1.05rem;
+    }
+
+    .section {
+      background: var(--card);
+      border-radius: var(--radius);
+      padding: 2rem;
+      margin-bottom: 3rem;
+      box-shadow: 0 1px 6px #0004;
+    }
+
+    .section img {
+      width: 100%;
+      border-radius: var(--radius);
+      box-shadow: 0 2px 16px #0005;
+      margin-bottom: 1.5rem;
+      background: #222;
+    }
+
+    .section h2 {
+      text-align: center;
+      margin-bottom: 1rem;
+    }
+
+    .section p {
+      color: var(--subtxt);
+      text-align: center;
+      max-width: 650px;
+      margin: 0 auto;
+    }
+
+    .features {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+      gap: 2rem;
+    }
+
+    .feature {
+      text-align: center;
+    }
+
+    .feature h3 {
+      font-family: 'Bebas Neue', sans-serif;
+      font-size: 1.7rem;
+      color: var(--accent);
+      margin: 0.5rem 0;
+      letter-spacing: 0.05em;
+    }
+
+    .feature p {
+      font-size: 1.05rem;
+      color: var(--subtxt);
+    }
+
+    .feature ion-icon {
+      font-size: 3rem;
+      color: var(--accent);
+      margin-bottom: 0.5rem;
+    }
+
+    .socials {
+      display: flex;
+      justify-content: center;
+      gap: 1.5rem;
+      margin: 2rem 0 1rem;
+    }
+
+    .socials a {
+      color: var(--accent);
+      font-size: 2rem;
+      transition: color 0.2s;
+    }
+
+    .socials a:hover {
+      color: #fff;
+    }
+
+    .footer {
+      text-align: center;
+      color: #888;
+      font-size: 1rem;
+      margin: 2rem 0 1rem;
+    }
+
+    @media (max-width: 600px) {
+      .hero-content {
+        text-align: center;
+      }
+    }
+  </style>
 </head>
 <body>
-	<!-- Header will be automatically injected here by header.js -->
-	<main>
-<section class="hero" style="display:flex;align-items:center;justify-content:center;gap:2.5rem;flex-wrap:wrap;">
-  <img src="assets/images/solarpack_logo.gif" alt="SolarPack Logo" style="max-width:320px;width:32vw;min-width:120px;background:transparent;box-shadow:none;display:block;" />
-  <div class="hero-content">
-	<h1 style="margin:0 0 0.5rem 0;font-size:clamp(3.5rem,8vw,6.5rem);line-height:1.05;color:var(--accent);">SolarPack</h1>
-	<div class="subtitle" style="font-size:1.25rem;margin-bottom:1.2rem;">Solar Vehicle Team at NC State</div>
-	<p style="color:var(--subtxt);max-width:600px;margin:0;">
-	  Striving to break barriers in the sustainable vehicle industry with a hardworking group of over 40 passionate students. Join us in our journey to a more sustainable future for transportation.
-	</p>
-  </div>
-</section>
+  <main>
+    <section class="hero">
+      <img src="assets/images/solarpack_logo.gif" alt="SolarPack Logo">
+      <div class="hero-content">
+        <h1>SolarPack</h1>
+        <div class="subtitle">Solar Vehicle Team at NC State</div>
+        <p>Striving to break barriers in the sustainable vehicle industry with a hardworking group of over 40 passionate students. Join us in our journey to a more sustainable future for transportation.</p>
+      </div>
+    </section>
 
-<section class="section" style="margin-top:2.5rem;max-width:900px;">
-  <img src="assets/images/hero_shot.jpg" alt="Solar Car Team" style="width:100%;max-width:100%;display:block;margin:0 auto 1.5rem;border-radius:var(--radius);box-shadow:0 2px 16px #0005;background:#222;" />
-  <h2 style="text-align:center;margin-bottom:0.7rem;">Sustainable, Efficient, and Powerful.</h2>
-  <p style="color:var(--subtxt);text-align:center;max-width:600px;margin:0 auto 1.2rem;">
-	As NC State's first solar vehicle team, we are aiming to show the world that solar energy can be used to power a car. Along the way, we are making a solar vehicle no other team has done before.
-  </p>
-</section>
+    <section class="section">
+      <img src="assets/images/hero_shot.jpg" alt="Solar Car Team">
+      <h2>Sustainable, Efficient, and Powerful.</h2>
+      <p>As NC State's first solar vehicle team, we are aiming to show the world that solar energy can be used to power a car. Along the way, we are making a solar vehicle no other team has done before.</p>
+    </section>
 
-<section class="section" style="max-width:900px;padding-bottom:2.5rem;">
-  <div style="display:grid;grid-template-columns:repeat(auto-fit,minmax(280px,1fr));gap:2.2rem;justify-items:center;">
-	<div style="text-align:center;width:100%;max-width:340px;">
-	  <ion-icon name="earth-outline" style="font-size:3.2rem;color:var(--accent);margin-bottom:0.7rem;"></ion-icon>
-	  <h3 style="color:var(--accent);font-family:'Bebas Neue',sans-serif;font-size:1.7rem;margin-bottom:0.7rem;letter-spacing:0.06em;line-height:1.2;">Global Impact</h3>
-	  <p style="color:var(--subtxt);font-size:1.13rem;line-height:1.7;margin-bottom:1.7rem;">We're showing the world that solar energy can power a multi-occupancy car. By building a vehicle no one has seen before, we hope to prove that sustainability and power can go hand in hand.</p>
-	</div>
-	<div style="text-align:center;width:100%;max-width:340px;">
-	  <ion-icon name="cog-outline" style="font-size:3.2rem;color:var(--accent);margin-bottom:0.7rem;"></ion-icon>
-	  <h3 style="color:var(--accent);font-family:'Bebas Neue',sans-serif;font-size:1.7rem;margin-bottom:0.7rem;letter-spacing:0.06em;line-height:1.2;">Engineering Excellence</h3>
-	  <p style="color:var(--subtxt);font-size:1.13rem;line-height:1.7;margin-bottom:1.7rem;">Our team thrives on creative problem solving. Members develop real-world skills as they tackle unique engineering challenges throughout our build process.</p>
-	</div>
-	<div style="text-align:center;width:100%;max-width:340px;">
-	  <ion-icon name="bulb-outline" style="font-size:3.2rem;color:var(--accent);margin-bottom:0.7rem;"></ion-icon>
-	  <h3 style="color:var(--accent);font-family:'Bebas Neue',sans-serif;font-size:1.7rem;margin-bottom:0.7rem;letter-spacing:0.06em;line-height:1.2;">Innovation</h3>
-	  <p style="color:var(--subtxt);font-size:1.13rem;line-height:1.7;margin-bottom:1.7rem;">Pioneering new solutions, our members are always innovating—using every resource to bring big ideas to life and push the boundaries of solar vehicle technology.</p>
-	</div>
-	<div style="text-align:center;width:100%;max-width:340px;">
-	  <ion-icon name="hand-left-outline" style="font-size:3.2rem;color:var(--accent);margin-bottom:0.7rem;"></ion-icon>
-	  <h3 style="color:var(--accent);font-family:'Bebas Neue',sans-serif;font-size:1.7rem;margin-bottom:0.7rem;letter-spacing:0.06em;line-height:1.2;">Collaboration</h3>
-	  <p style="color:var(--subtxt);font-size:1.13rem;line-height:1.7;margin-bottom:1.7rem;">We partner with companies and alumni to guide our journey, building strong relationships as we promote the future of energy-efficient vehicles.</p>
-	</div>
-	<div style="text-align:center;width:100%;max-width:340px;">
-	  <ion-icon name="location-outline" style="font-size:3.2rem;color:var(--accent);margin-bottom:0.7rem;"></ion-icon>
-	  <h3 style="color:var(--accent);font-family:'Bebas Neue',sans-serif;font-size:1.7rem;margin-bottom:0.7rem;letter-spacing:0.06em;line-height:1.2;">Rooted in the Triangle</h3>
-	  <p style="color:var(--subtxt);font-size:1.13rem;line-height:1.7;margin-bottom:1.7rem;">Proudly representing the Research Triangle, we embody the spirit of innovation and excellence that defines our region—driving forward as leaders in sustainable technology.</p>
-	</div>
-  </div>
-</section>
-		</section>
+    <section class="section features">
+      <div class="feature">
+        <ion-icon name="earth-outline"></ion-icon>
+        <h3>Global Impact</h3>
+        <p>We're showing the world that solar energy can power a multi-occupancy car. By building a vehicle no one has seen before, we hope to prove that sustainability and power can go hand in hand.</p>
+      </div>
+      <div class="feature">
+        <ion-icon name="cog-outline"></ion-icon>
+        <h3>Engineering Excellence</h3>
+        <p>Our team thrives on creative problem solving. Members develop real-world skills as they tackle unique engineering challenges throughout our build process.</p>
+      </div>
+      <div class="feature">
+        <ion-icon name="bulb-outline"></ion-icon>
+        <h3>Innovation</h3>
+        <p>Pioneering new solutions, our members are always innovating—using every resource to bring big ideas to life and push the boundaries of solar vehicle technology.</p>
+      </div>
+      <div class="feature">
+        <ion-icon name="hand-left-outline"></ion-icon>
+        <h3>Collaboration</h3>
+        <p>We partner with companies and alumni to guide our journey, building strong relationships as we promote the future of energy-efficient vehicles.</p>
+      </div>
+      <div class="feature">
+        <ion-icon name="location-outline"></ion-icon>
+        <h3>Rooted in the Triangle</h3>
+        <p>Proudly representing the Research Triangle, we embody the spirit of innovation and excellence that defines our region—driving forward as leaders in sustainable technology.</p>
+      </div>
+    </section>
 
-		<div class="socials">
-	  <a href="https://www.instagram.com/solarpacknc/" title="Instagram" target="_blank" rel="noopener"><i class="fab fa-instagram"></i></a>
-	  <a href="https://www.linkedin.com/company/solarpack-nc-state/" title="LinkedIn" target="_blank" rel="noopener"><i class="fab fa-linkedin"></i></a>
-	  <a href="https://www.facebook.com/SolarPackNC/" title="Facebook" target="_blank" rel="noopener"><i class="fab fa-facebook"></i></a>
-		</div>
-	</main>
-	<footer class="footer">
-		&copy; 2025 SolarPack · NC State Solar Vehicle Team. All rights reserved.
-	</footer>
+    <div class="socials">
+      <a href="https://www.instagram.com/solarpacknc/" target="_blank"><i class="fab fa-instagram"></i></a>
+      <a href="https://www.linkedin.com/company/solarpack-nc-state/" target="_blank"><i class="fab fa-linkedin"></i></a>
+      <a href="https://www.facebook.com/SolarPackNC/" target="_blank"><i class="fab fa-facebook"></i></a>
+    </div>
+  </main>
+
+  <footer class="footer">
+    &copy; 2025 SolarPack · NC State Solar Vehicle Team. All rights reserved.
+  </footer>
 </body>
 </html>
