--- a/index.html
+++ b/index.html
@@ -158,6 +158,9 @@
       .hero-content {
         text-align: center;
       }
+      .hero img {
+        max-width: 140px;
+      }
     }
   </style>
 </head>
