--- a/index.html
+++ b/index.html
@@ -128,6 +128,14 @@
       font-size: 3rem;
       color: var(--accent);
       margin-bottom: 0.5rem;
+      z-index: 1;
+      position: relative;
+    }
+
+    /* Ensure features section is below overlays/menus */
+    .features {
+      z-index: 1;
+      position: relative;
     }
 
     .socials {
