--- a/app.html
+++ b/app.html
@@ -37,11 +37,7 @@
 		<section class="section" style="text-align:center;">
 			<h1 style="font-family:'Bebas Neue',sans-serif;font-size:3rem;color:var(--accent);margin-bottom:1.2rem;">SolarPack App</h1>
 			<p style="color:var(--subtxt);font-size:1.2rem;max-width:600px;margin:0 auto 2.2rem;">Welcome to the SolarPack App page! Here you'll find information about our mobile and web applications, features, and how to get involved as a user or developer.</p>
-			<a href="https://solarpack-app-server.onrender.com/#" target="_blank" style="display:inline-block;margin-bottom:2rem;text-decoration:none;">
-				<button style="background:var(--accent);color:#fff;font-family:'DM Sans',sans-serif;font-size:1.1rem;padding:0.7rem 2.2rem;border:none;border-radius:8px;box-shadow:0 2px 8px #0003;cursor:pointer;transition:background 0.2s;">
-					View Live Telemetry
-				</button>
-			</a>
+			<!-- Moved View Live Telemetry button below screenshots -->
 			<a href="https://apps.apple.com/us/app/your-app-id" target="_blank" style="display:inline-block;margin-bottom:2.5rem;">
 				<img src="assets/images/app_store.png" alt="Download on the App Store" style="height:60px;width:auto;box-shadow:none;background:none;" />
 			</a>
@@ -66,6 +62,13 @@
 				</div>
 			</div>
 			<!-- End App Screenshots Grid -->
+			<div style="width:100%;display:flex;justify-content:center;margin-top:2.5rem;">
+				<a href="https://solarpack-app-server.onrender.com/#" target="_blank" style="text-decoration:none;">
+					<button style="background:var(--accent);color:#fff;font-family:'Bebas Neue',sans-serif;font-size:2rem;font-weight:bold;letter-spacing:2px;padding:0.9rem 2.8rem;border:none;border-radius:10px;box-shadow:0 2px 12px #0003;cursor:pointer;transition:background 0.2s;text-transform:uppercase;">
+						VIEW LIVE TELEMETRY
+					</button>
+				</a>
+			</div>
    <style>
 	   /* Page-specific styles */
 	   .section {
