--- a/app.html
+++ b/app.html
@@ -44,7 +44,7 @@
 
 			<!-- End App Screenshots Grid -->
 			<div style="width:100%;display:flex;justify-content:center;margin-top:2.5rem;">
-				<a href="https://solarpack-app-server.onrender.com/#" target="_blank" style="text-decoration:none;">
+				<a href="https://solarpack-app-server-alyv.onrender.com/#" target="_blank" style="text-decoration:none;">
 					<button style="background:var(--accent);color:#fff;font-family:'Bebas Neue',sans-serif;font-size:2rem;font-weight:bold;letter-spacing:2px;padding:0.9rem 2.8rem;border:none;border-radius:10px;box-shadow:0 2px 12px #0003;cursor:pointer;transition:background 0.2s;text-transform:uppercase;">
 						VIEW LIVE TELEMETRY
 					</button>
