--- a/donate.html
+++ b/donate.html
@@ -36,6 +36,6 @@
 			<a href="#" class="donate-btn"><i class="fas fa-heart"></i> Donate Now</a>
 		</div>
 	</main>
-	<footer class="footer">&copy; 2025 Solar Car Club. All rights reserved.</footer>
+	<footer class="footer">&copy; 2025 SolarPack. All rights reserved.</footer>
 </body>
 </html>
