--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
     </section>
 
     <section class="section">
-      <img src="assets/images/hero_shot.jpg" alt="Solar Car Team">
+      <img src="assets/images/hero_shot.jpg" alt="SolarPack Team">
       <h2>Sustainable, Efficient, and Powerful.</h2>
       <p>As NC State's first solar vehicle team, we are aiming to show the world that solar energy can be used to power a car. Along the way, we are making a solar vehicle no other team has done before.</p>
     </section>
