--- a/alumni.html
+++ b/alumni.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
-	<title>Solar Car Club · Alumni</title>
+	<title>SolarPack · Alumni</title>
 	<link rel="preconnect" href="https://fonts.googleapis.com" />
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 	<link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=DM+Sans:wght@400;600&display=swap" rel="stylesheet" />
@@ -168,6 +168,6 @@
 	  </div>
 	</div>
 	</main>
-	<footer class="footer">&copy; 2025 Solar Car Club. All rights reserved.</footer>
+	<footer class="footer">&copy; 2025 SolarPack. All rights reserved.</footer>
 </body>
 </html>
