--- a/contact.html
+++ b/contact.html
@@ -31,7 +31,7 @@
 		<h1>Contact Us</h1>
 		<div class="contact-section">
 			<div class="contact-info">
-				<p>Email us at <a href="mailto:solarcar@yourdomain.com">solarcar@yourdomain.com</a></p>
+				<p>Email us at <a href="mailto:solarpacknc@ncsu.edu">solarpacknc@ncsu.edu</a></p>
 				<p>Or reach out on our socials below!</p>
 			</div>
 			<div class="contact-socials">
@@ -41,6 +41,6 @@
 			</div>
 		</div>
 	</main>
-	<footer class="footer">&copy; 2025 Solar Car Club. All rights reserved.</footer>
+	<footer class="footer">&copy; 2025 SolarPack. All rights reserved.</footer>
 </body>
 </html>
