--- a/sponsors.html
+++ b/sponsors.html
@@ -39,6 +39,6 @@
 			<!-- Add more sponsor cards as needed -->
 		</div>
 	</main>
-	<footer class="footer">&copy; 2025 Solar Car Club. All rights reserved.</footer>
+	<footer class="footer">&copy; 2025 SolarPack Club. All rights reserved.</footer>
 </body>
 </html>
