--- a/app.html
+++ b/app.html
@@ -245,19 +245,20 @@
 		<section class="section" style="text-align:center;">
 			<h1 style="font-family:'Bebas Neue',sans-serif;font-size:3rem;color:var(--accent);margin-bottom:1.2rem;">SolarPack App</h1>
 			<p style="color:var(--subtxt);font-size:1.2rem;max-width:600px;margin:0 auto 2.2rem;">Welcome to the SolarPack App page! Here you'll find information about our mobile and web applications, features, and how to get involved as a user or developer.</p>
-			<!-- Moved View Live Telemetry button below screenshots -->
-			<a href="https://apps.apple.com/us/app/your-app-id" target="_blank" style="display:inline-block;margin-bottom:2.5rem;">
-				<img src="assets/images/app_store.png" alt="Download on the App Store" style="height:60px;width:auto;box-shadow:none;background:none;" />
-			</a>
-
-			<!-- End App Screenshots Grid -->
-			<div style="width:100%;display:flex;justify-content:center;margin-top:2.5rem;">
-				<a href="https://solarpack-app-server-alyv.onrender.com/#" target="_blank" style="text-decoration:none;">
-					<button style="background:var(--accent);color:#fff;font-family:'Bebas Neue',sans-serif;font-size:2rem;font-weight:bold;letter-spacing:2px;padding:0.9rem 2.8rem;border:none;border-radius:10px;box-shadow:0 2px 12px #0003;cursor:pointer;transition:background 0.2s;text-transform:uppercase;">
+			
+			<!-- App Store and Telemetry Buttons Row -->
+			<div style="width:100%;display:flex;justify-content:flex-end;align-items:center;margin-bottom:2.5rem;gap:1.2rem;">
+				<a href="https://apps.apple.com/us/app/your-app-id">
+					<img src="assets/images/app_store.png" alt="Download on the App Store" style="height:60px;width:auto;box-shadow:none;background:none;" />
+				</a>
+				<a href="https://solarpack-app-server-alyv.onrender.com/#" style="text-decoration:none;">
+					<button style="background:var(--accent);color:#fff;font-family:'Bebas Neue',sans-serif;font-size:1.3rem;font-weight:bold;letter-spacing:2px;padding:0.7rem 2.2rem;display:flex;align-items:center;gap:0.7rem;border:none;border-radius:10px;box-shadow:0 2px 12px #0003;cursor:pointer;transition:background 0.2s;text-transform:uppercase;">
+						<i class="fas fa-satellite-dish" style="font-size:1.5rem;"></i>
 						VIEW LIVE TELEMETRY
 					</button>
 				</a>
 			</div>
+			<!-- End App Store and Telemetry Buttons Row -->
 			
 			<!-- App Screenshots Grid: Interactive iPad Screenshots -->
 			<div class="screenshots-container">
