Improve app and team page styling
Refactored app.html to use a dedicated .app-buttons-row class for better button layout and responsiveness, and adjusted button padding. Updated team.html to use var(--surface) for member card backgrounds for improved theme consistency.

--- a/team.html
+++ b/team.html
@@ -16,7 +16,7 @@
 		/* Page-specific styles */
 		h1 { font-family: "Bebas Neue", sans-serif; font-size: clamp(2.5rem, 7vw, 4.5rem); letter-spacing: 0.04em; margin: 2.5rem 0 0.5rem; text-align: center; }
 		.team-grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(220px, 1fr)); gap: 2rem; max-width: 900px; margin: 2.5rem auto 0; }
-		.member-card { background: #23272f; /* lighter, higher contrast than var(--card) */ border-radius: var(--radius); box-shadow: 0 4px 24px #0006; /* stronger shadow for separation */ padding: 2rem 1.2rem 1.2rem; text-align: center; }
+		.member-card { background: var(--surface); border-radius: var(--radius); box-shadow: 0 4px 24px #0006; padding: 2rem 1.2rem 1.2rem; text-align: center; }
 		.member-img { width: 90px; height: 90px; border-radius: 50%; background: #222; object-fit: cover; margin-bottom: 1rem; }
 		.member-name { font-family: "Bebas Neue", sans-serif; font-size: 1.5rem; color: var(--accent); margin-bottom: 0.2rem; }
 		.member-role { color: var(--subtxt); font-size: 1.1rem; margin-bottom: 0.7rem; }
