--- a/app.html
+++ b/app.html
@@ -236,6 +236,30 @@
 			.modal-content {
 				padding: 1rem;
 			}
+
+			.app-buttons-row {
+				flex-direction: column;
+				gap: 1rem;
+			}
+
+			.app-buttons-row a {
+				justify-content: center;
+			}
+		}
+
+		.app-buttons-row {
+			width: 100%;
+			display: flex;
+			justify-content: center;
+			align-items: center;
+			gap: 1.2rem;
+			margin-bottom: 2.5rem;
+			flex-wrap: wrap;
+		}
+
+		.app-buttons-row a {
+			display: flex;
+			align-items: center;
 		}
 	</style>
 </head>
@@ -247,12 +271,12 @@
 			<p style="color:var(--subtxt);font-size:1.2rem;max-width:600px;margin:0 auto 2.2rem;">Welcome to the SolarPack App page! Here you'll find information about our mobile and web applications, features, and how to get involved as a user or developer.</p>
 			
 			<!-- App Store and Telemetry Buttons Row -->
-			<div style="width:100%;display:flex;justify-content:flex-end;align-items:center;margin-bottom:2.5rem;gap:1.2rem;">
+			<div class="app-buttons-row">
 				<a href="https://apps.apple.com/us/app/your-app-id">
 					<img src="assets/images/app_store.png" alt="Download on the App Store" style="height:60px;width:auto;box-shadow:none;background:none;" />
 				</a>
 				<a href="https://solarpack-app-server-alyv.onrender.com/#" style="text-decoration:none;">
-					<button style="background:var(--accent);color:#fff;font-family:'Bebas Neue',sans-serif;font-size:1.3rem;font-weight:bold;letter-spacing:2px;padding:0.7rem 2.2rem;display:flex;align-items:center;gap:0.7rem;border:none;border-radius:10px;box-shadow:0 2px 12px #0003;cursor:pointer;transition:background 0.2s;text-transform:uppercase;">
+					<button style="background:var(--accent);color:#fff;font-family:'Bebas Neue',sans-serif;font-size:1.3rem;font-weight:bold;letter-spacing:2px;padding:1.0rem 2.2rem;display:flex;align-items:center;gap:0.7rem;border:none;border-radius:10px;box-shadow:0 2px 12px #0003;cursor:pointer;transition:background 0.2s;text-transform:uppercase;">
 						<i class="fas fa-satellite-dish" style="font-size:1.5rem;"></i>
 						VIEW LIVE TELEMETRY
 					</button>
